tests/baselines/reference/privacyClassImplementsClauseDeclFile.errors.txt
tests/cases/compiler/privacyClassImplementsClauseDeclFile_GlobalFile.ts(14,77): error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(15,77): error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(20,79): error TS4019: Implements clause references inaccessible name 'privateModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(23,78): error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(41,77): error TS4019: Implements clause references inaccessible name 'privateInterfaceInPrivateModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(41,77): error TS4019: Implements clause references inaccessible name 'privateModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(46,79): error TS4019: Implements clause references inaccessible name 'privateModule'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(63,65): error TS4019: Implements clause references inaccessible name 'privateInterface'.
tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts(68,75): error TS4019: Implements clause references inaccessible name 'privateModule'.


==== tests/cases/compiler/privacyClassImplementsClauseDeclFile_externalModule.ts (8 errors) ====
    
    export module publicModule {
        export interface publicInterfaceInPublicModule {
        }
    
        interface privateInterfaceInPublicModule {
        }
    
        class privateClassImplementingPublicInterfaceInModule implements publicInterfaceInPublicModule {
        }
        class privateClassImplementingPrivateInterfaceInModule implements privateInterfaceInPublicModule {
        }
        export class publicClassImplementingPublicInterfaceInModule implements publicInterfaceInPublicModule {
        }
        export class publicClassImplementingPrivateInterfaceInModule implements privateInterfaceInPublicModule { // Should error
                                                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
        }
    
        class privateClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule {
        }
        export class publicClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule { // Should error
                                                                                  ~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateModule'.
        }
    
        export class publicClassImplementingPrivateAndPublicInterface implements privateInterfaceInPublicModule, publicInterfaceInPublicModule { // Should error
                                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
        }
    }
    
    module privateModule {
        export interface publicInterfaceInPrivateModule {
    
        }
    
        interface privateInterfaceInPrivateModule {
        }
    
        class privateClassImplementingPublicInterfaceInModule implements publicInterfaceInPrivateModule {
        }
        class privateClassImplementingPrivateInterfaceInModule implements privateInterfaceInPrivateModule {
        }
        export class publicClassImplementingPublicInterfaceInModule implements publicInterfaceInPrivateModule {
        }
        export class publicClassImplementingPrivateInterfaceInModule implements privateInterfaceInPrivateModule { 
                                                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateInterfaceInPrivateModule'.
                                                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateModule'.
        }
    
        class privateClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule {
        }
        export class publicClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule {
                                                                                  ~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateModule'.
        }
    }
    
    export interface publicInterface {
    
    }
    
    interface privateInterface {
    }
    
    class privateClassImplementingPublicInterface implements publicInterface {
    }
    class privateClassImplementingPrivateInterfaceInModule implements privateInterface {
    }
    export class publicClassImplementingPublicInterface implements publicInterface {
    }
    export class publicClassImplementingPrivateInterface implements privateInterface { // Should error
                                                                    ~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateInterface'.
    }
    
    class privateClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule {
    }
    export class publicClassImplementingFromPrivateModuleInterface implements privateModule.publicInterfaceInPrivateModule { // Should error
                                                                              ~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateModule'.
    }
    
==== tests/cases/compiler/privacyClassImplementsClauseDeclFile_GlobalFile.ts (1 errors) ====
    module publicModuleInGlobal {
        export interface publicInterfaceInPublicModule {
        }
    
        interface privateInterfaceInPublicModule {
        }
    
        class privateClassImplementingPublicInterfaceInModule implements publicInterfaceInPublicModule {
        }
        class privateClassImplementingPrivateInterfaceInModule implements privateInterfaceInPublicModule {
        }
        export class publicClassImplementingPublicInterfaceInModule implements publicInterfaceInPublicModule {
        }
        export class publicClassImplementingPrivateInterfaceInModule implements privateInterfaceInPublicModule { // Should error
                                                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4019: Implements clause references inaccessible name 'privateInterfaceInPublicModule'.
        }
    }
    interface publicInterfaceInGlobal {
    }
    class publicClassImplementingPublicInterfaceInGlobal implements publicInterfaceInGlobal {
    }
    